--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,5 +11,12 @@ pipeline {
                 }
             }
         }
+        stage("Build") {
+          steps{
+               script {
+                   sh "ansible-playbook ansible/build.yml -i ansible/inventory/host.yml"
+                }
+            }
+        }
        }
        }
