--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage("Build") {
           steps{
                script {
-                   sh "Ansible-playbook ansible/build.yml -i ansible/inventory/host.yml"
+                   sh "ansible-playbook ansible/build.yml -i ansible/inventory/host.yml"
                 }
             }
         }
