--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage("Build") {
           steps{
                script {
-                   sh "ansible-playbook /home/vagrant/respiratory/my-app/Ansible/build.yml -i /home/vagrant/respiratory/my-app/Ansible/inventory/host.yml"
+                   sh "ansible-playbook Ansible/build.yml -i Ansible/inventory/host.yml"
                 }
             }
         }
