--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         stage("Build") {
           steps{
                script {
+                   sh "cd /home/vagrant/respiratory/my-app/Ansible",
                    sh "ansible-playbook build.yml -i inventory/host.yml"
                 }
             }
