--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
           steps{
                script {
                    dir("/home/vagrant/respiratory/my-app/Ansible") {
-                   sh "ansible-playbook build.yml -i inventory/host.yml" }
+                   sh "sudo ansible-playbook build.yml -i inventory/host.yml" }
                 }
             }
         }
