--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
           steps{
                script {
                    dir("/home/vagrant/respiratory/my-app/Ansible") {
+                   sh "sudo su",
                    sh "ansible-playbook build.yml -i inventory/host.yml" }
                 }
             }
