--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,5 +18,12 @@ pipeline {
                 }
             }
         }
+          stage("Docker") {
+          steps{
+               script {
+                   sh " ansible-playbook docker.yml -i host.yml" 
+                }
+            }
+        }
        }
        }
